@@ -53,16 +53,7 @@ url=http://www.keezmovies.com/
 ########################################################
 # Next
 ########################################################
-item_infos=<li class="active">\d+</li> <li><a href = "(/[^"]+page=\d+)"
-item_order=url
-item_skill=space|lock
-item_info_name=title
-item_info_build=video.devil.locale|30103
-item_info_name=icon
-item_info_build=video.devil.image|next.png
-item_url_build=http://www.keezmovies.com%s
-########################################################
-item_infos=<li class="active">\d+</li> <li><a href = "(/pornstar/letter/[^"]+)"
+item_infos=<li class="next" id="paginator_next"><a rel="next" href="(/[^"]+page=\d+)"
 item_order=url
 item_skill=space|lock
 item_info_name=title
