@@ -15,6 +15,20 @@ director=VideoDevil
 icon=video.devil.image|pornotube.png
 url=pornotube.com.cfg
 ########################################################
+title=GirlfriendVideos
+type=rss
+genre=GirlfriendVideos
+director=VideoDevil
+icon=video.devil.image|gfvideos.png
+url=gfvideos.com.cfg
+########################################################
+title=EPORNER
+type=rss
+genre=EPORNER
+director=VideoDevil
+icon=video.devil.image|eporner.png
+url=eporner.com.cfg
+########################################################
 title=YouPorn
 type=rss
 genre=YouPorn
@@ -99,12 +113,12 @@ director=VideoDevil
 icon=video.devil.image|xvideos.png
 url=xvideos.com.cfg
 ########################################################
-#title=MofoSex
-#type=rss
-#genre=MofoSex
-#director=VideoDevil
-#icon=video.devil.image|mofosex.png
-#url=mofosex.com.cfg
+title=MofoSex
+type=rss
+genre=MofoSex
+director=VideoDevil
+icon=video.devil.image|mofosex.png
+url=mofosex.com.cfg
 ########################################################
 title=PornRabbit
 type=rss
